Adicionado correções e melhorias

--- a/references.bib
+++ b/references.bib
@@ -257,3 +257,8 @@
 	publisher	= {Rio de Janeiro. PUC, Dep. de Informática, 2004.},
 	year		= {2004}
 }
+
+@online{emileAppLink,
+	title 		= {Emile Mobile | GSORT},
+	note 		= "Acessado em 10/03/2018. Disponível em: http:/http://emile.ifba.edu.br/"
+}
