--- a/sections/1-introducao.tex
+++ b/sections/1-introducao.tex
@@ -3,7 +3,7 @@
 %Falar sobre a popularização dos dispositivos móveis e da Internet.%
 %Falar sobre as mudanças introduzidas pelos dispositivos móveis nas formas de comunicação em sociedade.%
 %--------------------------%
-Os dispositivos móveis apresentam a cada dia novas oportunidades e desafios para as tecnologias da informação, tais como o acesso ubíquo, a portabilidade, a democratização do acesso à informação além de novas oportunidades de negócio. Com a expansão da Internet e o grande volume de dados compartilhados nas redes sociais e aplicativos de troca de mensagens, surgiram novos paradigmas (e.g. \textit{Big Data}, \textit{Cloud Computing}, \textit{NoSQL}, etc.), novas tecnologias como o \textit{Push Notification} e também novas oportunidades de trabalho e profissões (e.g. O analista de dados, o desenvolvedor mobile, o \textit{design UX}, etc.), além de pesquisas importantes na ciência da computação que abrange tanto hardware como software.\par
+Os dispositivos móveis apresentam a cada dia novas oportunidades e desafios para as tecnologias da informação, tais como o acesso ubíquo, a portabilidade, a democratização do acesso à informação e novas oportunidades de negócio. Com a expansão da Internet e o grande volume de dados compartilhados nas redes sociais e aplicativos de troca de mensagens, surgiram novos paradigmas (e.g. \textit{Big Data}, \textit{Cloud Computing}, \textit{NoSQL}, etc.), novas tecnologias como o \textit{Push Notification} e também novas oportunidades de trabalho e profissões (e.g. O analista de dados, o desenvolvedor mobile, o \textit{design UX}, etc.), além de pesquisas importantes na ciência da computação que abrange tanto hardware como software.\par
 
 Os smartphones inovam a cada dia diversas áreas do conhecimento, tais como a engenharia elétrica, no projeto de baterias cada vez mais eficientes, o design, no projeto de interfaces cada vez mais intuitivas e influenciam diretamente na evolução da Internet e dos meios de comunicação como as redes móveis que expandem as áreas de cobertura para atender ao crescente número de aparelhos conectados. Os dispositivos móveis também permitem bons empreendimentos através dos aplicativos. Atualmente, o número de downloads cresce a cada dia na \textit{App Store} e \textit{Google Play}, demonstrando uma certa disponibilidade dos usuários de passarem cada vez mais tempo utilizando os aplicativos do que os próprios navegadores de Internet \cite{D&T}. Através dos aplicativos, é possível monetizar e gerar receitas via marketing digital e desenvolver soluções para diversos segmentos, tais como o \textit{e-commerce}, redes sociais e sistemas de informação.\par
 
@@ -17,20 +17,21 @@ Os smartphones inovam a cada dia diversas áreas do conhecimento, tais como a en
 %	5. deploy de arquivos read-write;
 %	6. operações disconectadas.
 %--------------------------%
-O desenvolvimento de aplicativos apesar de contar com inúmeras ferramentas tais como as IDEs (Android Studio e Eclipse) e frameworks (\textit{Ionic} e \textit{PhoneGap}), ainda apresentam limitações, dentre elas, a falta de soluções arquiteturais de alto nível, ausência de componentes de \textit{UI}\footnote{\textit{User Interface} ou interface do usuário} flexíveis e de alto nível. No Android por exemplo, para construir uma interface gráfica utiliza-se arquivos xml incorporados por objetos java. Outra limitação encontrada no desenvolvimento mobile, é a falta de suporte facilitado para comunicação \textit{RESTFul}, visto que os aplicativos móveis utilizam na maioria dos casos algum \textit{web service}.
+O desenvolvimento de aplicativos apesar de contar com inúmeras ferramentas tais como as IDEs (Android Studio e Eclipse) e frameworks (\textit{Ionic} e \textit{PhoneGap}), ainda apresentam limitações, dentre elas, a falta de soluções arquiteturais de alto nível, ausência de componentes de \textit{UI}\footnote{\textit{User Interface} ou interface do usuário} flexíveis e de alto nível. No Android por exemplo, para construir uma interface gráfica utiliza-se arquivos xml incorporados por objetos java. Outra limitação encontrada no desenvolvimento mobile, é a falta de suporte facilitado para comunicação \textit{RESTful}, visto que os aplicativos móveis utilizam na maioria dos casos algum \textit{web service}.
 
 
 %--------------------------%
 % Este trabalho teve como objetivo o projeto, implementação e avaliação de uma arquitetura flexível e reutilizável...%
 %--------------------------%
-Este trabalho teve como objetivo o projeto, implementação e avaliação de uma arquitetura orientada a plugins e reutilizável para o desenvolvimento de sistemas de informação \textit{mobile}. Dentre os benefícios desenvolvidos destaca-se uma arquitetura de plugins, que permite ao desenvolvedor implementar as funcionalidades do aplicativo com maior facilidade de extensão, manutenção e baixo acoplamento entre os componentes. O projeto desta arquitetura visa atender quatro requisitos funcionais, disponibilizando para cada um deles, componentes de alto nível para os plugins. Os requisitos são: acesso a rede para comunicação com serviços \textit{RESTFul}; persistência de dados local via \textit{SQLITE}; notificações do sistema via \textit{push} e local (partindo do próprio aplicativo) e um mecanismo de comunicação entre objetos através de eventos.
+Este trabalho teve como objetivo o projeto, implementação e avaliação de uma arquitetura orientada a plugins e reutilizável para o desenvolvimento de sistemas de informação \textit{mobile}. Dentre os benefícios desenvolvidos destaca-se uma arquitetura de plugins, que permite ao desenvolvedor implementar as funcionalidades do aplicativo com maior facilidade de extensão, manutenção e baixo acoplamento entre os componentes. O projeto desta arquitetura visa atender quatro requisitos funcionais, disponibilizando para cada um deles, componentes de alto nível para os plugins. Os requisitos são: acesso a rede para comunicação com serviços \textit{RESTful}, persistência de dados local via \textit{SQLITE}, notificações do sistema via \textit{push} e local (partindo do próprio aplicativo) e um mecanismo de comunicação entre objetos através de eventos.
 
 
 %--------------------------%
 %* Falar rapidamente de alguns aspectos técnicos: "implementado em Qt, bla, bla, bla ..."%
 %--------------------------%
-Para desenvolver este trabalho, foi utilizado o Qt, ele dispõe de APIs que facilitaram o desenvolvimento e o atendimento dos requisitos funcionais da arquitetura, além do QML, que é a linguagem implementada nos componentes reusáveis e deve ser utilizada na contrução de objetos de \textit{UI} pelos plugins.
+Para desenvolver este trabalho, foi utilizado o Qt, ele dispõe de APIs que facilitaram o desenvolvimento e o atendimento dos requisitos funcionais da arquitetura, além do QML, que é a linguagem implementada nos componentes reusáveis e deve ser utilizada na construção de objetos de \textit{UI} pelos plugins.\par
 
+Para avaliar a arquitetura proposta, foi desenvolvido duas versões de um aplicativo móvel, sendo uma versão baseada na arquitetura descrito neste trabalho e a outra sem utilizar a arquitetura. Após finalizar o desenvolvimento das duas versões, foram extraídas algumas métricas dos dois modelos com o objetivo de validar os benefícios em utilizar a arquitetura proposta neste trabalho. As métricas definidas para avaliação foram: número de linhas de código implementado e densidade de bugs encontrado em cada versão. Para complementar a avaliação, foi extraído uma lista de outros aspectos destacando detalhes observados do desenvolvimento de cada versão do aplicativo.
 
 %--------------------------%
 %* Retórica *%
