--- a/sections/6-conclusao.tex
+++ b/sections/6-conclusao.tex
@@ -3,7 +3,8 @@
 %	\item retomar o texto, como na introdução e no resumo
 %	\item reapresentar os resultados, conclusões...
 %\end{enumerate}
-Aqui será apresentado as conclusões obtidos em todo o trabalho, sejam elas positivas ou negativas.
+% Aqui será apresentado as conclusões obtidos em todo o trabalho, sejam elas positivas ou negativas.
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 
 \subsection{Limitações Deste Trabalho}
