Adicionado a conclusão do trabalho e outras correções

--- a/sections/6-conclusao.tex
+++ b/sections/6-conclusao.tex
@@ -4,8 +4,13 @@
 %	\item reapresentar os resultados, conclusões...
 %\end{enumerate}
 % Aqui será apresentado as conclusões obtidos em todo o trabalho, sejam elas positivas ou negativas.
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+Este artigo apresentou o projeto, implementação e documentação de uma arquitetura de software baseado em plugins para o desenvolvimento de sistemas de informação mobile. Destacou-se os recursos de baixo acoplamento entre objetos e facilidade de implementar features para comunicação com serviços \textit{RESTful}. A arquitetura destaca-se rica em recursos para operações básicas como acesso a rede, persistência de dados e notificações ao usuário tanto via push como local, através de APIs de alto nível. É possível ainda desenvolver objetos de UI usando componentes de alto nível através do QML.\par
 
+Também foi realizado uma avaliação da arquitetura através do desenvolvimento de um aplicativo em duas versões, uma com e outra sem a arquitetura com o objetivo de analisar as vantagens e os benefícios de utilizar o framework proposto neste trabalho. Através da avaliação, concluiu-se que a arquitetura carece de depuração facilitada e melhorias na API de acesso a rede, além de uma documentação para cada uma das features disponibilizadas.\par
+
+A característica de plugins da arquitetura desacopla as features do aplicativo do núcleo da aplicação, o que permite ao desenvolvedor adicionar, modificar ou remover recursos com maior facilidade, já que a comunicação entre objetos e recursos devem ser realizadas através de eventos. Através dos plugins, o desenvolvedor não precisa modificar o núcleo do aplicativo quando precisar alterar ou adicionar alguma funcionalidade, além de obter atualizações do framework sem perder as alterações feitas. Outra característica, é que o desenvolvedor irá escrever muito menos código, pois o framework já implementa muitas funcionalidades que os plugins podem utilizar através de APIs de alto nível, evitando ter que escrever código java, C++ ou Objective C. A arquitetura dispõe ainda de dois estilos para o aplicativo, usando \textit{containers} como \textit{StackView} e \textit{SwipeView} e permite ao desenvolvedor escolher qual usar editando apenas uma propriedade em um arquivo de configuração.
+
+Os possíveis trabalhos futuros podem disponibilizar uma documentação das APIS da arquitetura, além de melhorar as features disponibilizadas. Os bugs identificados na avaliação também podem ser corrigidos e outros recursos podem ser adicionados no futuro a fim de incrementar funcionalidades através de APIs de alto nível a serem utilizadas pelos plugins. Dentre os trabalhos futuros, o suporte a plugins C++ é o maior dentre os desafios, pois permitiria aos plugins implementar features mais complexas através de implementações de mais baixo nível.
 
 \subsection{Limitações Deste Trabalho}
 A lista a seguir apresenta as limitações identificadas nesta arquitetura.
